Changes to Feature Set

--- a/src/GTour/Components/GuidedTour.razor
+++ b/src/GTour/Components/GuidedTour.razor
@@ -4,7 +4,7 @@
 {
   <div data-gtour-overlay="@TourId" @ref="OverlayElement" class="guided-tour-overlay @SelectedTheme.GTourOverlay @OverlayClass" @onclick="@(async (e) => { if (CloseOnOverlayClick) await TourService.CancelTour(); })"></div>
 }
-<div data-gtour-wrapper="@TourId" @ref="WrapperElement" hidden="@(!IsActive)" role="tooltip" class="guided-tour-wrapper @SelectedTheme.GTourWrapper @TourWrapperClass">
+<div @attributes=UnmatchedAttributes data-gtour-wrapper="@TourId" @ref="WrapperElement" hidden="@(!IsActive)" role="tooltip" class="guided-tour-wrapper @SelectedTheme.GTourWrapper @TourWrapperClass">
   <CascadingValue Value=this>
     @ChildContent
   </CascadingValue>
