--- a/src/STGTour.DemoComponents/Pages/HelpThemeComponent.razor
+++ b/src/STGTour.DemoComponents/Pages/HelpThemeComponent.razor
@@ -110,7 +110,7 @@
 
 <pre>
     <code class="language-html">
-        @("<link rel='stylesheet' href='_content/GTour/css/styles.css' />")
+        @("<link rel='stylesheet' href='_content/STGtour.GTour/css/styles.css' />")
     </code>
 </pre>
 
