--- a/src/STGTour.DemoServerSide/Pages/_Host.cshtml
+++ b/src/STGTour.DemoServerSide/Pages/_Host.cshtml
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>STGTour.DemoServerSide</title>
   <base href="~/" />
-  <link rel="stylesheet" href="_content/GTour/css/styles.css" />
+  <link rel="stylesheet" href="_content/STGtour.GTour/css/styles.css" />
   <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.1.0/styles/github-dark.min.css">
   <link href="css/site.css" rel="stylesheet" />
